full-node/sov-ledger-apis/tests/integration/snapshots/integration__rest__get_tx.snap
---
source: full-node/sov-ledger-apis/tests/integration/rest.rs
expression: "&tx"
---
{
  "data": {
    "body": "dHgxIGJvZHk=",
    "eventRange": {
      "end": {
        "$serde_json::private::Number": "0"
      },
      "start": {
        "$serde_json::private::Number": "0"
      }
    },
    "hash": "0x709b55bd3da0f5a838125bd0ee20c5bfdd7caba173912d4281cae816b79a201b",
    "number": {
      "$serde_json::private::Number": "0"
    },
    "receipt": {
      "Successful": {
        "$serde_json::private::Number": "0.0"
      }
    },
    "type": "tx"
  },
  "meta": {}
}
